# portfolio

./: .gitignore  CNAME  README.md  about.html  archive.html  blog.html  contact.markdown  hie.yaml  index.html  package-lock.json  package.json  portfolio.cabal  stack.yaml  works.html
.circleci/: config.yml
.github/workflows/: build-and-deploy.yml  build-site.yml
app/: Html.hs  Site.hs
css/: mystyles.css  mystyles.scss
dist-newstyle/cache/: config
drafts/: 2020-05-13-stack-problem.markdown  2020-06-19-crash-on=navcom-by-unknown-navcontroller.md  2020-06-22-wf-1000xm3.md  2020-07-18-cookpad-intern-2020.md  2020-08-16-beginning-ios-development.md  2020-08-30-spajam-qualification.md  2020-10-21-fail-nri-intern.md
posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  2020-05-13-stack-problem.html  2020-05-13-stack-problem.markdown  2020-05-18-deploy-hakyll-to-gh-pages.html  2020-05-18-deploy-hakyll-to-gh-pages.md  2020-05-20-build-blog-with-hakyll.html  2020-05-20-build-blog-with-hakyll.md  2020-05-27-bitrise-trigger-by-pr-comment.html  2020-05-27-bitrise-trigger-by-pr-comment.md  2020-05-28-x11-over-ssh.html  2020-05-28-x11-over-ssh.md  2020-06-13-deploy-hakyll-to-gh-pages.html  2020-06-13-deploy-hakyll-to-gh-pages.md  2020-06-22-wf-1000xm3.html  2020-06-22-wf-1000xm3.md  2020-09-19-iosdc-0.html  2020-09-19-iosdc-0.md  2020-09-20-iosdc-1.html  2020-09-20-iosdc-1.md  2020-09-21-iosdc-2.html  2020-09-21-iosdc-2.md  2020-11-13.html  2020-11-13.md  2021-01-25.md  2021-07-09.html  2021-07-09.md  2021-07-26.html  2021-07-26.md  2029-05-20-build-blog-with-hakyll.html
sass/: mystyles.scss
src/: Images.hs  Index.hs  Lib.hs  Posts.hs
src/Html/: Article.hs  Blog.hs  BlogPost.hs  Const.hs  File.hs  Index.hs  Lib.hs
src/Site/: About.hs  Archive.hs  Blog.hs  Css.hs  Images.hs  Index.hs  Lib.hs  Pandoc.hs  Posts.hs  Works.hs
src/html/: Const.hs  File.hs
src/site/: Archive.hs  Css.hs  Index.hs  Lib.hs  Posts.hs
static/: about.md  works.md
templates/: default.html
