name:               portfolio
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

library
  hs-source-dirs:   src
  exposed-modules:  Html.Lib
                  , Site.Lib
                  , Site.Images
                  , Site.Css
                  , Site.Posts
                  , Site.Archive
                  , Site.Index
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , lucid == 2.9.12
                  , directory
                  , text
  default-language: Haskell2010

executable site
  main-is:          app/Site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , template-haskell == 2.15.0.0
                  , portfolio
                  , lucid == 2.9.12
                  , text
  ghc-options:      -threaded
  default-language: Haskell2010

executable html
  main-is:          app/Html.hs
  build-depends:    base == 4.*
                  , portfolio
                  , optparse-applicative == 0.15.1.0
  ghc-options:      -threaded
  default-language: Haskell2010
