name:               portfolio
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

library
  hs-source-dirs:   src
  exposed-modules:  Html.Lib
                  , Html.Index
                  , Html.Article
                  , Html.Blog
                  , Html.BlogPost
                  , Site.Pandoc
                  , Site.Lib
                  , Site.Images
                  , Site.Posts
                  , Site.Blog
                  , Site.Index
                  , Site.About
                  , Site.Works
  build-depends:    base
                  , hakyll
                  , lucid
                  , directory
                  , text
                  , pandoc-types
                  , pandoc
  default-language: Haskell2010

executable site
  main-is:          app/Site.hs
  build-depends:    base
                  , hakyll
                  , hakyll-sass
                  , template-haskell
                  , portfolio
                  , lucid
                  , text
                  , filepath
                  , process
  ghc-options:      -threaded
  default-language: Haskell2010

executable html
  main-is:          app/Html.hs
  build-depends:    base
                  , portfolio
                  , optparse-applicative
                  , process
  ghc-options:      -threaded
  default-language: Haskell2010
